Align buttons to center of page, fix alignment of tabs

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ button {
 }
 
 .buttons {
-  margin-bottom: -4px;
+  display: flex;
+  justify-content: center;
 }
 
 #content {
